# mini-tor

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.deploy.yaml  docker-compose.yaml  todo.txt
.github/workflows/: build.yml  check.yml  ci.yml  clippy.yml  deploy.yml  format.yml  security.yml  test.yml
doc/plantuml/: class.puml
scripts/: demo.sh  demo_generic.sh  demo_rotation.sh
services/common/: Cargo.toml
services/common/src/: crypto.rs  error.rs  lib.rs  metrics.rs  protocol.rs  tls.rs  types.rs
services/discovery/: Cargo.toml  Dockerfile
services/discovery/src/: assets.rs  config.rs  error.rs  grpc.rs  handlers.rs  lib.rs  main.rs  metrics.rs  registry.rs  routes.rs  tui.rs
services/discovery/src/api/: error.rs  grpc.rs  mod.rs  rest.rs
services/discovery/src/core/: config.rs  mod.rs  registry.rs  store.rs
services/discovery/src/tui/: mod.rs
services/discovery/tests/: api_integration.rs  grpc_integration.rs
services/discovery/web-dist/: index.html  web-ui-1a121e609619084d_bg.wasm  web-ui-1e94063d06a23959.js  web-ui-1e94063d06a23959_bg.wasm  web-ui-40b96b1f6ec2e963.js  web-ui-40b96b1f6ec2e963_bg.wasm  web-ui-8ffe24297ec5f5e6.js  web-ui-8ffe24297ec5f5e6_bg.wasm  web-ui-bebdcb868d9fc68b_bg.wasm  web-ui-c4e2e5e72cedcd4c.js  web-ui-c4e2e5e72cedcd4c_bg.wasm
services/proto/: Cargo.toml  build.rs
services/proto/definitions/: discovery.proto  types.proto
services/proto/src/: lib.rs
services/relay-node/: Cargo.toml  Dockerfile
services/relay-node/src/: config.rs  config_wizard.rs  keypair.rs  main.rs  metrics.rs  tui.rs
services/relay-node/src/circuit/: entry.rs  exit.rs  handler.rs  middle.rs
services/relay-node/src/core/: config.rs  keypair.rs  metrics.rs  mod.rs
services/relay-node/src/tui/: mod.rs
services/relay-node/src/wizard/: mod.rs
services/tor-client/: Cargo.toml  Dockerfile
services/tor-client/src/: circuit.rs  config.rs  config_wizard.rs  crypto_engine.rs  directory_client.rs  lib.rs  main.rs  metrics.rs  stream.rs  tui.rs
services/tor-client/src/client/: mock.rs  mod.rs  socks_proxy.rs  traits.rs
services/tor-client/src/core/: circuit.rs  crypto_engine.rs  metrics.rs  mod.rs  stream.rs  transport.rs
services/tor-client/src/tui/: mod.rs
services/tor-client/src/wizard/: mod.rs
services/tor-client/tests/: circuit_builder_integration.rs  directory_client_integration.rs
services/web-ui/: Cargo.toml  Trunk.toml  index.html
services/web-ui/src/: app.rs
