[workspace]
resolver = "3"
members = [
    "services/common",
    "services/proto",
    "services/discovery",
    "services/relay-node",
    "services/tor-client",
]

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
missing_errors_doc = "allow"
unnecessary_wraps = "deny"
