[package]
name = "common"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
utoipa = "5"
aes = "0.8"
ctr = "0.9"
sha2 = "0.10"
hmac = "0.12"
tokio = { version = "1", features = ["io-util"] }
rand = "0.9.2"
rand_core = { version = "0.6", features = ["getrandom"] }
tor-llcrypto = "0.23"
