[package]
name = "discovery"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
anyhow = "1.0"
thiserror = "2.0"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
clap = { version = "4", features = ["derive", "env"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
http = "1"
