[package]
name = "discovery"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
proto = { path = "../proto" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.12"
prost = "0.13"
tonic-reflection = "0.12"
tonic-health = "0.12"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4", features = ["derive", "env"] }
ratatui = "0.29"
crossterm = "0.28"
rust-embed = "8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
http = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio-stream = "0.1"

