[package]
name = "relay-node"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tor-llcrypto = "0.23"
sha2 = "0.10"
ratatui = "0.29"
crossterm = "0.28"
tokio-rustls = "0.26"

[lints]
workspace = true
