[package]
name = "tor-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
common = { path = "../common" }
proto = { path = "../proto" }
rand = "0.9.2"
tonic = "0.12"
prost = "0.13"
simple_socks5 = "0.1.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ratatui = "0.29"
crossterm = "0.28"

[lints]
workspace = true

[dev-dependencies]
tor-llcrypto = "0.23"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = { version = "0.9.2" }
tokio-rustls = "0.26"
