[package]
name = "web-ui"
version = "0.1.0"
edition = "2024"

# This crate is WASM-only and is NOT a workspace member.
# Build with: cd services/web-ui && trunk build --release
# Output goes to services/discovery/web-dist/

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "z"
lto = true

[workspace]
